--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -13,6 +13,9 @@ sqlalchemy = "^2.0.20"
 alembic = "^1.12.0"
 python-dotenv = "^1.0.0"
 asyncpg = "^0.28.0"
+strawberry-graphql = {extras = ["fastapi"], version = "^0.216.0"}
+bcrypt = "^4.1.1"
+pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 
 
 [build-system]
