--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -16,8 +16,19 @@ asyncpg = "^0.28.0"
 strawberry-graphql = {extras = ["fastapi"], version = "^0.216.0"}
 bcrypt = "^4.1.1"
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
+pytest = "^7.4.3"
+pytest-asyncio = "^0.23.2"
+mock = "^5.1.0"
+pytest-mock = "^3.12.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+pythonpath = [
+  ".", "src",
+]
+asyncio_mode="auto"
