--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -20,6 +20,8 @@ pytest = "^7.4.3"
 pytest-asyncio = "^0.23.2"
 mock = "^5.1.0"
 pytest-mock = "^3.12.0"
+celery = "^5.3.6"
+flower = "^2.0.1"
 
 
 [build-system]
